--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -28,11 +28,21 @@
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.title {
+  font-size: 30px;
+}
+
+.login-div {
+  font-size: 20px;
+}
+
+table {
+  font-size: 20px;
+  width: 90%;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+caption {
+  font-size: 25px;
 }
